fixed top start and overflow

--- a/src/styles/drawMap.css
+++ b/src/styles/drawMap.css
@@ -3,12 +3,12 @@
     flex-direction: column;
     align-items: center;
     justify-content: center;
-    background-color: rgb(94, 29, 6);
 }
 
 .topPanel{
     display: flex;
     flex-wrap: wrap;
+    height: 120px;
 }
 
 .screen{
@@ -16,18 +16,20 @@
     justify-content: center;
     align-items: center;
     overflow: scroll;
-    width: 83vw;
-    height: 83vw;
-    background-color: black;
-}
-
-.canvas{
-    background-color: rgb(1, 1, 82);
+    width: 75vw;
+    height: 75vw;
+    background-color: rgb(17, 15, 15);
+    border-radius: 10px;
     position: relative;
-    overflow: scroll;
+}
+.canvas{
+    position: relative;
+    max-width: 75vw;
+    max-height: 75vw;
 }
 
 .bottomPanel{
     display: flex;
     flex-wrap: wrap;
+    height: 120px;
 }
